fix: fix message title overflow in component source

--- a/app/components/lookbook/message/component.css
+++ b/app/components/lookbook/message/component.css
@@ -11,7 +11,8 @@
     }
 
     & .message-title {
-      @apply text-base text-lookbook-message-title truncate uppercase font-bold tracking-wide mb-2;
+      @apply text-base text-lookbook-message-title uppercase font-bold tracking-wide mb-2;
+      overflow-wrap: anywhere;
     }
 
     & .message-icon {
